# gpkih

./: .gitignore  .tools  CMakeLists.txt  COMANDOS.md  NEWCONFIG.cpp  docker-compose.yml  gopenssl.conf  gpkih  profiles.csv  setup  setup.ps1  setup.sh  todo.txt  tothink.txt
config/: pki.conf  (+5 more)
src/: CMakeLists.txt  Doxyfile  X509.cpp  aliases.hpp  buffer.cpp  buffer.hpp  config_management.cpp  config_management.hpp  consts.hpp  gpki  gpki.cpp  gpki.hpp  gpkih  gpkih.cpp  gpkih.hpp  macros.hpp  memmgmt.cpp  memmgmt.hpp  opts.hpp  printing.hpp  profiles.csv  structs.hpp  todo.txt
src/TESTING/: Logger.cpp  Logger.hpp  organised_struct_printing.cpp
src/actions/: CMakeLists.txt  actions.cpp  actions.hpp  actions_build.cpp  actions_create_pack.cpp  actions_gencrl.cpp  actions_get.cpp  actions_init.cpp  actions_list.cpp  actions_revoke.cpp  actions_set.cpp  build.cpp  config.cpp  create_pack.cpp  gencrl.cpp  get.cpp  iface.hpp  iface_template.hpp  init.cpp  list.cpp  remove.cpp  revoke.cpp
src/actions/add/: AAdd.cpp  AAdd.hpp  CMakeLists.txt  add.cpp  add.hpp  addCA.cpp  help.cpp
src/actions/dhparam/: CMakeLists.txt  dhparam.cpp  dhparam.hpp  generate.cpp  generate.hpp  help.cpp
src/actions/export/: AExport.hpp  CMakeLists.txt  execute.cpp  help.cpp
src/actions/export/csv/: CMakeLists.txt  export.cpp  export.hpp
src/actions/export/mysql/: CMakeLists.txt  MySqlConnection.cpp  MySqlConnection.hpp  export.cpp  export.hpp
src/actions/export/postgres/: CMakeLists.txt  export.cpp  export.hpp  postgreSQLconnection.cpp  postgreSQLconnection.hpp
src/actions/export/sqlite/: CMakeLists.txt  SQLiteConnection.cpp  SQLiteConnection.hpp  export.cpp  export.hpp
src/actions/gencrl/: AGencrl.hpp  CMakeLists.txt  execute.cpp  help.cpp
src/actions/get/: AGet.hpp  CMakeLists.txt  execute.cpp  help.cpp
src/actions/implementation/: build.cpp  gencrl.cpp  init.cpp  list.cpp  remove.cpp  revoke.cpp
src/actions/init/: AInit.hpp  CMakeLists.txt  execute.cpp  help.cpp
src/actions/list/: AList.hpp  CMakeLists.txt  execute.cpp  help.cpp
src/actions/new/: ANew.hpp  execute.cpp  help.cpp
src/actions/remove/: ARemove.hpp  CMakeLists.txt  execute.cpp  help.cpp
src/actions/rename/: ARename.hpp  CMakeLists.txt  execute.cpp  help.cpp
src/actions/reset/: AReset.hpp  CMakeLists.txt  execute.cpp  help.cpp
src/actions/revoke/: ARevoke.hpp  CMakeLists.txt  execute.cpp  help.cpp
src/actions/set/: ASet.hpp  CMakeLists.txt  execute.cpp  help.cpp
src/cli/: CMakeLists.txt  cli.cpp  cli.hpp
src/cli/implementation/: cli.cpp
src/config/: CMakeLists.txt  Config.hpp  ProfileConfig.hpp  config.hpp  config_management.cpp  config_management.hpp  enums.hpp  files.hpp
src/config/implementation/: Config.cpp  ProfileConfig.cpp  files.cpp
src/customFunctions/: db.cpp  gsed.cpp  profilemanagement.cpp
src/db/: CMakeLists.txt  database.hpp  entities.cpp  entities.hpp  mnck.cpp  mnck.hpp  profiles.cpp  profiles.hpp
src/db/implementation/: entities.cpp  mnck.cpp  profiles.cpp
src/entities/: CMakeLists.txt  conv.hpp  entities.cpp  entities.hpp  enums.hpp  structs.hpp  subj_utils.cpp  subj_utils.hpp
src/entities/implementation/: conv.cpp  entities.cpp  subj_utils.cpp
src/experimental/: CMakeLists.txt  cli.cpp  export.hpp  formatter.cpp  formatter.hpp  fter.cpp  fter.hpp  organised_struct_printing.cpp  test.cpp
src/experimental/implementation/: export.cpp  formatter.cpp
src/help/: CMakeLists.txt  generic.cpp  get.cpp  help.cpp  help.hpp  help2.cpp  help2.hpp  help_build.cpp  help_create_pack.cpp  help_gencrl.cpp  help_generic.cpp  help_get.cpp  help_init.cpp  help_list.cpp  help_remove.cpp  help_rename.cpp  help_reset.cpp  help_revoke.cpp  help_set.cpp  revoke.cpp  set.cpp
src/help/helper_ifaces/: iHelper_build.cpp
src/help/iHelpers/: iface.hpp
src/help/iHelpers/implementation/: build.cpp  gencrl.cpp  get.cpp  init.cpp  list.cpp  remove.cpp  rename.cpp  reset.cpp  revoke.cpp  set.cpp
src/help/texts/: build.cpp  export.cpp  gencrl.cpp  get.cpp  init.cpp  list.cpp  remove.cpp  rename.cpp  reset.cpp  revoke.cpp  set.cpp
src/libs/logger/: CMakeLists.txt  a.cpp  enums.hpp  logger.cpp  logger.hpp
src/libs/memory/: CMakeLists.txt  buffer.cpp  buffer.hpp
src/libs/printing/: CMakeLists.txt  constants.hpp  printing.cpp  printing.hpp  z.cpp
src/libs/ssl/: CMakeLists.txt  a  gssl.cpp  gssl.hpp  key_priv.pem  key_pub.pem  testing.cpp
src/libs/ssl/pkey/: CMakeLists.txt  ciphers.cpp  ciphers.hpp  dh.cpp  dh.hpp  ed25519.cpp  ed25519.hpp  ifaces.cpp  ifaces.hpp  rsa.cpp  rsa.hpp  test.cpp
src/libs/ssl/testing/: a  a.cpp  b  b.cpp  c  c.cpp
src/libs/ssl/x509/: CMakeLists.txt  enums.hpp  x509.cpp  x509.hpp
src/libs/utils/: CMakeLists.txt  env.cpp  fs.cpp  str.cpp  utils.hpp
src/logger/: error_management.cpp  error_management.hpp  log_enums.hpp  logger.cpp  logger.hpp  signals.cpp  signals.hpp
src/memory/: memmgmt.cpp  memmgmt.hpp
src/modes/: build.cpp  build.hpp  init.cpp  init.hpp  profile.cpp  profile.hpp  revoke.cpp  revoke.hpp
src/parse/: CMakeLists.txt  build.cpp  config.cpp  create_pack.cpp  gencrl.cpp  genkey.cpp  get.cpp  init.cpp  list.cpp  parser.cpp  parser.hpp  remove.cpp  remove_all.cpp  rename.cpp  reset.cpp  revoke.cpp  set.cpp  subparser.cpp  subparser.hpp  subparser_build.cpp  subparser_create_pack.cpp  subparser_entity.cpp  subparser_gencrl.cpp  subparser_init.cpp  subparser_list.cpp  subparser_profile.cpp  subparser_remove.cpp  subparser_remove_all.cpp  subparser_revoke.cpp
src/parse/implementation/: build.cpp  dbexport.cpp  gencrl.cpp  genkey.cpp  get.cpp  init.cpp  list.cpp  parser.cpp  remove.cpp  rename.cpp  reset.cpp  revoke.cpp  set.cpp
src/printing/: printing.cpp  printing.hpp
src/profiles/: CMakeLists.txt  conv.hpp  enums.hpp  profiles.cpp  profiles.hpp  structs.hpp
src/profiles/implementation/: conv.cpp  profiles.cpp
src/prototypes_tests/: c  config_mapping.cpp
src/signals/: signals.cpp
src/utils/: checkpermissions.cpp  entities.cpp  env.cpp  fs.cpp  gpkih_util_funcs.hpp  gsed.cpp  mem.cpp  openssl.cpp  str.cpp  utils.hpp  vpn_config.hpp
(+21 files in other folders)
